<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/cnf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/to" />

    <TextView
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:text="@string/_144_50"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="111dp"
        android:text="@string/gru"
        app:layout_constraintEnd_toStartOf="@+id/buyButton"
        app:layout_constraintStart_toStartOf="@+id/departure"
        app:layout_constraintTop_toTopOf="@+id/value" />

    <TextView
        android:id="@+id/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/_13_30"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/arrival" />

    <TextView
        android:id="@+id/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_13_30"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/to"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toTopOf="@+id/buyButton" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comprar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/textValue"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/timeAndNumberStops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_1h30_1_parada"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textValue" />

    <TextView
        android:id="@+id/textValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valor_total_c_taxas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>